k8s/services/customer-service-config.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: matster07/taxi-customer-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
---
kind: Service
apiVersion: v1
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - name: customer-service
      port: 80
      targetPort: 8091
