k8s/services/driver-service-config.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: driver-service
  labels:
    app: driver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
        - name: driver-service
          image: matster07/taxi-driver-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8092
---
kind: Service
apiVersion: v1
metadata:
  name: driver-service
  labels:
    app: driver-service
spec:
  type: ClusterIP
  selector:
    app: driver-service
  ports:
    - name: driver-service
      port: 80
      targetPort: 8092
